--- a/001-where.org
+++ b/001-where.org
@@ -1,6 +1,179 @@
 >>>> Gog and Grav are going to tromp around in the woods aimlessly with the stated goal of xxx
 
+Plans for this morning, include: Go wander around in the woods with Gog. Gog and Grav were cousins. Pretty much the same age, much-little.
+
+Grav and Gog had been same-cousins and highest-friends for their whole lives. They'd been living together in Bhorv Zolk for about half of that time.
+
+They had the same instinct for benefit-crazy-think, a term that means, "to benefit from free and open thinking and doing." They realized, through their endless talking about ideas, that if you explore the idea places that no one else would because they were lazy or superstisious, you would more easily find value-stones of ideas that, because they were original and unexplored, were more profitable than average.
+
+Grav and Gog were no longer just kids. Their minds had sort of overlapped, after years of complex communication. There was nothing supernatural or exceptional about this. It happens all the time, and they were just a slightly higher-functioning example. They, together, had some pretty amazing ideas. Some would call this relationship a "friendship".
+
+Grav and Gog /were/ friends. They were also, accomplished gentleman philosophers. The advantage they could have had over people was emense, but they used their powers for good. They wanted to have fun and wanted for everyone else to have fun.
+
+Not everyone was of this mind. Verk was staying in the burrow just two down from Grav, and inevitably, they would run into each other. Often this was in the relief-burrow, as had happened recently. The relief-burrow was positioned and shaped for sound-deadening reasons. For reasons that would utterly relate to modern readers. It was shaped something like a daisy (relief-flower as it ws called), scaloped around the sides so that sound would naturally deaden. It predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acustical/ characteristics of a large, circular room. Get it?
+
+In addition to this, there was a snaking entranceway into the relief-burrow that had two intentional characteristics: as the other end of this passage was facing the opening of the cave system to receieve the most sunlight this would make the relief-cave more well-lit (as the walls floor and cieling of this passage were polished) but it would also catch the eye when someone was making their way into the burrow. It also had a couple of switchbacks, so the passage could be made longer and prevent a direct view into the burrow, for the Crec were not shy about pooping together, but they did think of the relief-burrow as unclean; a kind of topic and thing that should be kept hidden, but without overdoing it.
+
+/A/ point to all of this is that the relief-burrow, given the right level of vigilance, could be thought of as reasonably suited for private conversations.
+
+And as the day before, Verk and Grav found themselves in such a "conversation" this morning. But this time, there were no ears to witness. And both men were practiced as judiciously using the relief-borrow to "talk clay".
+
+Verk had, what for Grav was a very unsettling characteristic as a person: He was a complete prolapsed-bison-rectum whenever he and Grav talked in truly private circumstances. He would be a slapper of shoulders and grinner of grins in more-or-less public circumstances. He seemed to be spending his life pretending to run for Elders-Quarum. As for his public behavior, something very close to that would be the only reasonable assumption for a neutral observer: "Oh, he appears to be trying to sell his persona actively to people for some gain", a very articulate and objective caveperson would say. And if he just shuts that off completely and becomes a different, increasingly nasty person, Grav was not just quite sure what to do with that.
+
+Verk automatically smiled broadly at Grav as he walked into the otherwise empty relief-burrow to see Grav urinating with his back to the entrance. Grav therefore did not see this smile.
+
+"Grav, what is the good word?", Verk said sharply, causing Grav's head to jerk around a bit too far.
+
+"Good morning Father-Brother Verk. Father-Brother Verk, I was genuinely taken aback by you yesterday. I /do/ feel the way you do about our Forest. I know, trust me. I will /never/ forget. My feelings are also quite strong.
+
+What have I done? Please, believe me. My conscience is free and I want to learn from you."
+
+"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticible anger still."
+
+"Yes, Father-Brother Verk. I will. Please forigve me. It is a large stone you put upon me. As you say, I will likely learn more if I do some discovery myself. That way I will remember better, as it is surely a grave misstep."
+
+Verk made a hissing sound that Grav couldn't categorize for meaning, as he was could not comfortably look at Verk for the time being.
+
+"What are you doing today?", asked Verk, still not /using/ the relief-burrow, but standing such that Grav could comfortably look at him, his facial expressions being another channel on which to express his outermost feelings.
+
+"Oh, Father-Brother Verk, Gog and I..."
+
+Verk hissed again but Grav now could see that he was huffing with contempt.
+
+"Gog, huh? You two fancy boys going deep into the woods today?", Verk made a complex dance of facial expressions and other gestures that Grav could not decipher. "Stay away from the bachelor-tree, you two." Verk made a sour, disdainful face.
+
+"Father-Brother Verk! I would never! Please, there could be a quiet-one nearing in the entrance.", Grav said, not trusting himself but to repeat what all agreed would be roughly appropriate in this situation: disgust.
+
+"We both know there is not."
+
+"What are you and Gog up to? Hopefully something constructive."
+
+"Yes, I think so, Father-brother Verk. We are going to find more value stone where we did last time. We think there is a vein of them following the river, but we didn't have time to look around much last time."
+
+"Get some strenuous work in while you're at it. If you bring me a value-stone agreed by all to be worth three deer carcass I will let you off of xxxdrill-or-whateverxxx next time."
+
+"Father-Brother Verk, I will do /both/. I will bring you such a stone and I will excel at the next xxxdrill-thingxxx!"
+
+"Yeah.", is all Verk said.
+
+He turned on his heels and said to Grav while leaving, "Keep your entrails on the inside."
+
+The click of his hyena spurs[fn:: These are raptor talon that are strung by sinew so that they point backwards and downwards from the heel, with just one talon per foot, but they are large and serve their function. They are fastened strongly, but often with just enough slack so that the talon makes an audible "click" while the wearer walks around the in the cave.] echoed down the entranceway.
+
+'I didn't believe an After-Die-Monster scat-pile of that!', thought Grav, with fury building inside him. 'I just go into dying-monkey mode and simply say the things I'm /supposed/ to say!', and with that Grav added a twinge of shame to the mix of feelings.
+
+Why, Grav wondered, did /he/ do that? And whatever he did or said when in that state was pretty much what you would expect a respectable caveperson to do. He thought, 'It works both ways. I /seem/ to be thinking something because, unless I am putting on an act, to the outside person, I look like I really mean them. How do I know that's not exactly what /everybody else/ is doing?'
+
+It was a dizzying thought. 'Maybe others /also/ do and say as I do in those situations.' This occurred to him as another thought that was surely worth scratching: 'The inner caveperson in another caveperson, was just like my inner caveperson. I am not special. Others are not just /things/ for me to use. I cannot know if there really is someone in there! I will never know, but life goes better if I assume there is another "me" behind those eyes. And maybe even a friend', Grav felt an odd cringe at that last part that he didn't understand.
+
 >>>> Grav is getting ready to go out and meet Gog xxsomewhere-interestingxx and from there go on their adventures.
+
+Gog was supposed to be at Helpful Monkey River-Join by 3 sun-palm from dawn. And he was there. Grav walked out of the clearing with spear and atlatl. These he carried strapped to his back in not-ready form. They were only carried for optortunistic hunting with Gog and Grav. This was another xxxname-for-good-ideaxxx of theirs: You could do hunting almost as effectively as you normally do, while doing something completely unrelated that involved walking through the woods. A Forest Wanderer Never Hunts, was a saying they were trying to get circulating.
+
+Grav was carrying baskets in each hand, bulging with the best mining equipment they could conjure.
+
+As Grav approached the glade that was between the tributaries of Helpful Monkey, where ledgend had it the Crec clan and culture had its beginning, Gog watched expressionless as Grav approached.
+
+Grav knew from experience that one had to pretty much shout over the thunder of the cascades on both the xxxclever-not-on-the-nose-names-for-Tigris-Euphratesxxx and y sides. It was truely an odd and kind of magical Forest-shaking, low rumble that was something like an earthquake that has been ongoing for thousands of years. The dirt doesn't mind. It just gets shaken about. And it turns out plants didn't mind it either, or as many suspect, were just a bit more productive because of the light massage. The occational tree here and there didn't move visibly, but a hand on the trunk would bring your mind back to the power around you. And trees, and rocks and whatever else vibrated hormonically, which added some color to the sea of white noise in the area.
+
+Shouting, Grav said, "Whatever we do, let's get the scat downstream!"
+
+Gog nodded, turned, and led the way.
+
+Marching along the xxxriver-namexxx became hypnotic in a way that Grav really loved. This, he discovered, was cultavatable. Get into the groove right away and you'll have a pleasant ride as a passenger in your own body. Let your mind wander.
+
+The way was just the right amount of complex and challenging to keep that dying-monkey mindset that settled in so sweet and welcome. Go, body! You know what to do. I've got thinking to do.
+
+Boulders, stones, eroded root systems, some of them slippery, some of them with some kind of barbed poisonous spine; which is why a smart caveman pays close attention when darting around the Forest, next to a mighty and angry river.
+
+This meditation and thinking went on for both men for hours as they flexed and honed their fundamental survival systems, both muscle and mind. It was surprisingly pleasant to be so wasteful of energy, Grav often thought.
+
+As the men had been flying through the Forest on foot for their whole lives, and probably a quarter of their hours, they instinctually knew where and when to rest pretty much simaltaniously.
+
+Their usual first stop on this route was The Great Crocodile lake, a semicircular lake near a bend in the xxxriverxxx standing on a high stone on the upper bank, you could see about half of the lake. It had its name due five-man-long, angry bull[fn:: do we need a humerous footnote here?] crocodile that would not bother with you so long as you didn't get within a quarter mile of /its/ lake. The croc died in their youth, but they both remember having to take the shortcut across the bend and being lectured by their parents all the while about exactly what the situation was and exactly what the stakes were. It was considered a "daring" thing to follow the river until just about all-finger years ago.
+
+In the comparative quiet, Gog turns to Grav.
+
+"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of xxxquartz-do-we-need-names-for-rocksxxx often has a twin a few feet or yards away, to one side or the other.
+
+Since we know that the river has eroded much of one side, snaking in and out; it pretty much parallels our first 'vein'[fn:: Gog was being colorful with his language because when they said 'vein' it referred to a /pattern of deposits/ and not much more. It was assumed to be a vein of sorts because it seemed to go in a straight line and keep producing even if you dug downward.], I'm thinking lets concentrate on upstream where it cuts in and out of a vein that might have been there."
+
+"Yup. Sounds good.", is all Grav said in response, having had the same hunch. "But wait, what about the sluce?"
+
+"We will /chain multiple/ sluses if necessary, or make another if that's easier."
+
+"Yaah. Good enough, I guess.", said Grav.
+
+---
+
+Grav was quite for a bit and then spoke. "Gog?"
+
+"Yu-huh?"
+
+"How do you feel about Father-Brother Verk?"
+
+Gog didn't react but continue to stare at a falls. He spoke softly at first.
+
+"Why?"
+
+"I don't know. Does he seem different to you when you're alone with him than he is otherwise? You know, among the people?"
+
+"Mmm", Gog's eyes squinted slightly.
+
+"I haven't been alone with him much. I mostly just try to avoid that possibility, honestly. I kind of get the feeling that he needs to let off some steam a lot of the time and I feel like, whoever's job that is, it has got to be a lot of 'work', if you know what I mean.
+
+Lots of making sure everything's going according to 'plan', but the plan also seems to change over time. Lots of getting into your business if he feels you've got a job to do for him. It looks like he likes to really let lose and let folks know not to cross him."
+
+Grav interjected, "Don't you feel like that could have some push-back? Treating people that way? I mean, he and everyone else knows that he's way up there and above critsizm. After a while of that I think you'd stop seeing your own faults."
+
+"Heh. Yeah, I have definitely seen that effect in play with some people. It is a thing. And I don't think you're way off the mark.", agreed Gog.
+
+"And also," Grav expended on his unoriginal theory, "wouldn't that kind of thing feed back on itself, rapidly?
+
+If you've driven those away who just /reasonably/ object to whatever urgent thing you're being lectured on, what's left over are a particular kind of caveperson. Kind of the last-part I'll call it. Or no, 'tail', like what you see disappearing into the bush when you've scared off a big lizard. There's a part that hangs around a bit longer. The 'tail'. Father-Brother Verk's tail of hangers-on are desperate for his approval. They will silently undergo /even worse/ mistreatment by him[fn:: They both felt a stir referincing him this way.] which in turn means that mistreatment can /expand/ and meet the new allowance, and so a person's[fn:: Gog was trying to steer back into the /abstract/ caveperson as the topic of conversation.] behavior can get /more/ extreme, which scares those around even more, making them willing to just let any kind of behavior go, pretend it didn't happen. Just don't get 'kicked out', you know what I mean. Rather simple people, usually."
+
+"Father-Brother Verk was a bit on the abusive side with me this morning.", said Grav.
+
+Gog made a pouty lower lip face at him. He pantomimed a child about to cry, with a quivering face.
+
+"Uh-huh. Don't act like you haven't been there. Being shunned by The Great Bear on one had is just dew off the leaf, but on the other hand, it's like a kind of reality stabilizer that you've known all your life; and unknowingly lean upon." After two drop-stone, "If you know what I mean."
+
+"I think so.", said Gog. "The whole clan is your people. All of those people deeply admire and reveir Father-Brother Verk and if you feel like you're the only one who sees that nasty side of him, it makes you feel like you're going xxxcrazyxxx."
+
+Grav jumped up, in part because it was time to get going again, but also in part out of surpise. I turned in the air, landing on his feet to face Gog[fn:: Being as fit as a monkey, some of the caveperson physical manerisms would often astound you. "The peak of human fitness" is not any kind of cliche for them. Everyone is pretty close to there out of necessity. And what is more, it was never seen as any kind of burden to them to maintain this kind of fitness. Life was just life. A Crav would leap your 8 foot garden fence with a grunt in the same way you would deftly leg over crotch-high barrier with a beer in each hand.]. Gog continued to sit on his rock with his chin on his fist, staring at Grav.
+
+"That's its own kind of power!", ejaculated Grav. xxxjust-kidding-no-jack_a_litxxx
+
+"Well, yeah. I guess."
+
+"No, think: if disagreeing makes you feel /bad/ and then eventually /crazy/ well...obviously stop disagreeing[fn:: It is worth noting that the men could literally be killed for most of this talk if overheard by any two other Crav. The confidence that they were alone was nearly absolute. No different from assuming you won't some day get hit by a stray arrow.]."
+
+"That's true, brother.", said Gog "I don't even think it takes a bad person, necesarally. Under some circumstances, plain old cavemen will mostly react in the same way. It's not entirely the 'fault' of the individual. It's also not entirely the 'fault' of the circumstances. It's a mix. Like when a lizard-bird's egg just /happen/ to fall into a pond full of crocodile hatchlings. That one lizard-bird pretty much has the productivity of a whole pond to himself[fn:: Yes, Crecspeak has gendered 2nd-person pronouns. And yes they would blithely use this word here.]"
+
+"It's not the fault of either, kind of. It just is.", said Grav
+
+"Is indeed!", huffed Gog "Let's get there!"
+
+They were off in an efficient jog mid-sentence.
+
+The place where they would soon arrive was waiting, with it's turned up mud and various mining implements. There were what could be called water-works for processing bulk quantities course, rocky earth.
+
+Gog's helpful contribution, which now looked like a monstrous, tired giraffe leaning over the river as if to drink[fn:: But instead was vomiting ferociously.], was in fact /not/ supposed to be leaning over the river, but no matter. It was a structure that was mostly STRUCTURE. Its long, cantilevered, nearly horizontal span was rather tirelessly engineered, with experiments and all, resulting in a lot of triangles and neatly uniform, arm-thick[fn:: No offense, but /their/ arm, not yours.] vine-span (xxx-rope-xxx)
+
+It's justifying feature was a relay of split bamboo culvurts that made about a thumb-pinkie diameter channel for water. All the splicing work had been done expertly, so it was about as water-tight as a stone channel, but it could /swivel/. It was fed by the river starting about one and half of one xxx100xxx men upstream.
+
+The floating-sluce swiveled expertly on a conveniently already extant poplar (??) tree about 10 man high and one man around at the base. It had a polished, dense, shiny sections at intervals where the bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluce itself ran out to a fixed 12 men length and contnously gave a heavy, ongoing, cold, laminer two-fisted punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed four man deep.
+
+It could be shortened at will, down to just over 9 man. So they had a three-man wide ring (with a break where the sluce was fed from high above, by a raised spill way ), with an outside diameter of 12 man.
+
+
+
+This gave the two men a lot of destructive potential from the local ecology's point of view. They had been making good use of it. One might think that you methodically slice out laser portions of this great ring and patiently sort through what results, and it does go this way in some places. In most places, the pounding water (xxxsluce-needs-wideningxxx) would just completely blast away whatever it was slung over. You could control this by swinging the sluce over the unmined bits slowly, so that it gently (as it were) eat into virgin river bed. The force of the water was such that more than just silt and pebbles got stirred up. Head-sized boulders would swirl merilly in this twisting torus of purposeful erosion. "River-Fist", the Workers had named it. After escaping from the more intense parts of the torrent, with a smooth under-hand toss from the deepest part of the xxxbigasstorrentxxx over the berm created by the advance of the boom.
+
+
+
+## gog/grav have "employees"
+## today is a holiday. /They/ are working. The /Workers/ are Holidaying
 
 >>>> Verk is staying in the burrow two burrows away from Grav and inevitably they meet in the morning xxsomewhere-definitely-no-others-hearxx
 
