--- a/000-preface.org
+++ b/000-preface.org
@@ -269,7 +269,7 @@ Verk's voice became calm, clear, and purposeful.
 
 "You are my blood, and there is a bond and love that transcends almost all things. What you need to do is work hastily on the /almost/ before you cross a line, child."
 
-Verk's eyes opened and he smiled. His voice now was unnecessarily loud with an affected cheerfulness. He shook himself and said, "Clear enough young buck?" He slapped Verk's bare shoulder with his clean hand. "I will see /you/ at drill tomorrow, yes?" Verk's smile broadened and his form froze as he awaited a response.
+Verk's eyes opened and he smiled. His voice now was unnecessarily loud with an affected cheerfulness. He shook himself and said, "Clear enough young buck?" He slapped Verk's bare shoulder with his clean hand. "I will see /you/ at club-drill next time, yes? I believe in four days?" Verk's smile broadened and his form froze as he awaited a response.
 
 Thinking that he should acknowledge so that all in the burrow could hear, since the question was asked in such a way he loudly said, "Oh! Yes Father-Brother Verk! I will be there!". He could feel his lips quivering.
 
