--- a/_notes.org
+++ b/_notes.org
@@ -41,6 +41,18 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- The big reveal at the end: bad 'bad' guys and 'good' guys literally just go their separate ways.
+- ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's booth their wine and their sacrament wine. Pretty much everything else is devil weed, but G&G are bold psyconauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
+- The Helpful Monkey is a river that flows southward (xxxfancy name for south) towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
+- I said "pre flowering plants", didn't I? 1) this probably impossible [maybe who cares], 2) "banana", "melon", "gourd"...will have to rethink. All this because I wanted to use "uvula" instead of "pea"?
+- Brother -> Bro is purposely propagated among the Crec. Soon cave/men/ are calling each other "bro". Then there is a great buggary scandal in "the military" during which, from one of their discussions, comes the hilarious idea of "bro-ham: a male buttox used as a substitute for cavewomen (we need a good word for 'vag')" As in, "Out on deployment and away from your wives for moons at a time? Worry not! bro-ham abound."
+- The mysterious forest babes: G&G, on one of their especially distant and daring excursions, near the border with xxx yet-anther-another-another-hated-neighboring-Forest xxx. They are sinewy, flexible, and fit. And they don't sweat much. They are giggly and have absolutely no overlapping language with G&G but they somehow manage to find a way to agree to meet back at this very spot (don't forget) exactly these many moons from now (don't forget or miscalculate). And they have fun. Bouncy-bouncy. They are like a bizzaro G&G, but baby-makers (although in literal terms, G&G thought of babies very little). They were ingenious and mysterious like G&G. They thought freely (oh so freely). And loved a bit of mischeiuf of any kind.
+- Needs uniformity, rules, standardization:
+  - Capitalization of Crecspeak
+  - The language used to express numbers.
+  - If we are going to "tag" Crecspeak, should be done soon.
+  - I flop back and forth between "men" and "cavemen", etc. do I care? do I have a rule? am I making a point with the choices?
+- It would be neat if there were lots of stories about "small-ones" (frickin babys), met at random in unimaginably distant parts of the xxxworldxxx. They don't speak. They don't act surprised. They trod on with purpose, armed like a skilled, adult hunter, look your way and nod, but never say a word and move on. These are known as forest-babies (maybe) and are fucking mystical.
 - Communication
   - Loud, long-distance whistling.
   - Somehow making a single loud bang. And then having a code "one bangith mean trouble, two bangith mean party"
@@ -76,23 +88,26 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - ancient-speak: Generally meaning "story-telling", this analogous to selling a book in our times. It is both 1) revered by default 2) kind of, let's face it, not always going to be a big deal. Times change, pops.
 - baby-makers: Girls. I am sorry. My job is to bring you this story accurately, including look /and/ feel. This was their world, sorry. But a Crec, or perhaps even any caveperson would have no less respect for a /mere/ baby-maker than you would for say a truck driver or computer technician. It's due its own respect, in their eyes. And everyone gets along, no less than you and your sister did. It's just what's up, that's all. 
 - bachelor-tree: A delicate, oddly "chubby" tree with soft lacy leaves that both looks and smells like your wedding night. Small burrowing animals like the bachelor-tree because its soft, incredibly wet flesh makes burrowing quite easy and the natural internal heaving of the tree ensures that it is a snug, sometimes very snug place to burrow, especially in the dry season. It can be problematic for burrowers to breath, because of the snugness and most will usually nest with just their noses sticking out of the opening. Because small tree-dwelling animals are predominately nocturnal, animal burrows in the bachelor-tree are almost always empty at night. This is also a very delicate topic of conversation among the Crec. Sure, the Amish might know what a vagina /is/, but will somehow manage to go a lifetime without saying it out-loud or acknowledging its existence[fn:: Ever.] (to reach for a tangible analog you might understand.) [TODO: the complex bachelor-tree reproductive cycle should *depend upon* cavemen.]
+- Balrag: A tribe that borders the large, thinly populated region to the Crec's south. From north to south: Bhorv Zolk -> undesirables -> undesirable's-undesirables -> next tribe over (Balrag). As it was both downhill and a good bit south, it was noticeably steamier. Gog or Grav would struggle for something meaning "exotic" to describe the milieu[fn:: A meaning they understood, but a word for which they might struggle.] that was Balrag Culture[fn:: They were fans.]. They had a style of drumming that was considered by most Crec to be a "bit on the carnal side", with rhythms that merged on scandalous. Their drumming was loud enough to be heard softly but distinctly on a calm, clear, crisp [omg what is "christmas"?] night...usually long past midnight.
 - Battle of the Snake-Meal, The: Without a doubt the most famous battle from The Great Club War, and its turning point in favor of ultimate victory for the Crec.
 - between-ham-fire-pebbles: Hemorrhoids, piles.
 - Bhorv Zolk: The cave "system" in which the Crav live. Properly, it's the name of the hill that the cave is dug out of, but the two concepts are more or less interchangabel.
 - bird-scat: Used variously for snot, puss, and, if you are a particularly nasty sort of Crec, semen.
+- boulder-door: A quantity. Exactly 100. Reckoned to be the number of boulders to keep handy to baracade the average cave entrance.
 - boulder-rhino: A kind of engine of war that is know by many names in our world. At its simplest (which it usually is), it is a collection of the largest stones that can possibly be hauled to the top of the hill/mountain, restrained by a few smaller rocks that will somehow be swat out of the way at the right time, releasing a thunderous stampede of very big boulders, in the direction of one's enemy, most often.
 - boulder-stump: Here we reach /the/ word around which this entire story orbits. You'll figure it out. It's pretty embarrassing after all.
 - burrow: The Crec use this word like we do to mean an animal's dwelling, under the ground or in a rotted tree for example. They also use it to mean "room", "cave" or any other more-or-less person-sized void made in rock or sturdy earth for the purpose of occupying, even if only for a drop-stone.
 - Clorp [singular and plural]: TODO: who are then and what makes them tick. They are the "enemy" of the Crec. And a definition.
 - club-fight: A kind of duel involving some ceremony. There is a regulatory body <why not name it here> that exists to ensure that any two clubs used in a club-fight are recognized as being "fair". The participants, on the other hand vary widely. The last rule of club-fight, as it is the most important, is: Someone's got to not be able to walk away.
 - Crec [singular and plural]: The Forest to which the Zog clan both lives and belongs. "Crec" can refer to the Forest or the people who live there.
-- drop-stone: A unit of time; about as long as it takes for a stone to hit the ground when dropped from an outstretched hand, on more or less level ground. They're as tall as you and used to inhibit the same planet. You figure it out.
+- drop-stone: A unit of time; about as long as it takes for a stone to hit the ground when dropped from an outstretched hand, on more or less level ground. They're as tall as you and used to inhibit the same planet. It works out to be a bit over half a second.
 - elders-quorum: This is a sort of "The Senate" of a Forest (in cases where they have bothered). It's just as inept and entertaining as our analogs (diet, soviet, merikin, parliament, kremlin, house, neighborhood gang...)
 - Ender-Of-All-Questions: God. Just one, like you. You will encounter references to "the gods". Rather improbably, this is used exactly as a modern, cynical teenager might use it: ironically. As in, /You are still such a tiresome superstitious moron that you probably believe in/ multiple /gods like back in primitive times./
 - father-brother: Your father's brother. Your "uncle", but with more information.
 - food-clay: Shit
 - Forest-Deer: A political party (same deal) that composes exactly 50% of the Elders-Quorum (You should now be asking if these are the good guys.)
 - Forest: The largest organizing category of people, analogous to a nation.
+- force: Strain.
 - juff: An alcoholic beverage made from fermented coconut flesh, and a polite quantity of spit from a special, designated virgin baby-maker, who is chosen yearly as the designated provider of spit (A custom that has been known to ruin some plans.)
 - jump-scare: Living in something like a giant ant hill, opportunities to e.g. hide around the corner and scare the food-clay out of someone abound. This is that.
 - man: A unit of measure with an obvious reference object. If you just assumed "six feet", you would be within 0.4%, just by "coincidence". Like all units of measure, but especially with 'length', the Crec are fastidious and follow a badger's warren of different ideas to further add precision. In conversation, like us, units of measure are imprecise. And unavoidably, things like time its daughter units, like speed are tricker, but there are always a few learned men to lower the precision bar ever more. BTW, it is never "men". As a unit of measure: one man, two man, three man.
@@ -109,6 +124,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - snake-meal: A "bump", "lump", "protuberance", "hump", or area of fattening. Also used in the way we say, "love handles".
 - soot-pallet: Wherever fire has deposited soot on an area of stone that has been used for writing, if you write in it, it becomes a "soot-pallet". It's as common as and thought of like billboards, but are not thought of as owned, so it's acceptable for someone to write something (proper) on such a sooted stone surface. Trespassing is still a thing, though.
 - squirrel-hoard: An abstract quantity meaning "a lot", if you thought "a whole bunch of" you'd be close.
+- strength: "Force", in the way used in physics.
 - sun-palm: A unit of time. The amount of time it takes for the sun to pass the width of one palm at arm's length. For example, if you want to know what-in-the-morning it is, hold your right arm out straight, rotate your upturned hand counter clockwise 90 degrees so that your fingers are pointing to your left, the distance from top of your hand (the outer [upper-most] part of the first knuckle of the pinkie) to the bottom of your hand (the outer [lower-most] part of the first knuckle of your index finger) is the unit you use to measure the hight of the son. A Crec will say, "It's 7 sun-palm from dawn, get a move on!"
 - take-money: Shorthand for take-part-money. Take-money also means "robbery" or "mugging", but the Crec universally do not make the connection.
 - take-part-money: A tax.
