--- a/_notes.org
+++ b/_notes.org
@@ -88,7 +88,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - ancient-speak: Generally meaning "story-telling", this analogous to selling a book in our times. It is both 1) revered by default 2) kind of, let's face it, not always going to be a big deal. Times change, pops.
 - baby-makers: Girls. I am sorry. My job is to bring you this story accurately, including look /and/ feel. This was their world, sorry. But a Crec, or perhaps even any caveperson would have no less respect for a /mere/ baby-maker than you would for say a truck driver or computer technician. It's due its own respect, in their eyes. And everyone gets along, no less than you and your sister did. It's just what's up, that's all. 
 - bachelor-tree: A delicate, oddly "chubby" tree with soft lacy leaves that both looks and smells like your wedding night. Small burrowing animals like the bachelor-tree because its soft, incredibly wet flesh makes burrowing quite easy and the natural internal heaving of the tree ensures that it is a snug, sometimes very snug place to burrow, especially in the dry season. It can be problematic for burrowers to breath, because of the snugness and most will usually nest with just their noses sticking out of the opening. Because small tree-dwelling animals are predominately nocturnal, animal burrows in the bachelor-tree are almost always empty at night. This is also a very delicate topic of conversation among the Crec. Sure, the Amish might know what a vagina /is/, but will somehow manage to go a lifetime without saying it out-loud or acknowledging its existence[fn:: Ever.] (to reach for a tangible analog you might understand.) [TODO: the complex bachelor-tree reproductive cycle should *depend upon* cavemen.]
-- Balrag: A tribe that borders the large, thinly populated region to the Crec's south. From north to south: Bhorv Zolk -> undesirables -> undesirable's-undesirables -> next tribe over (Balrag). As it was both downhill and a good bit south, it was noticeably steamier. Gog or Grav would struggle for something meaning "exotic" to describe the milieu[fn:: A meaning they understood, but a word for which they might struggle.] that was Balrag Culture[fn:: They were fans.]. They had a style of drumming that was considered by most Crec to be a "bit on the carnal side", with rhythms that merged on scandalous. Their drumming was loud enough to be heard softly but distinctly on a calm, clear, crisp [omg what is "christmas"?] night...usually long past midnight.
+- Balrag: A tribe that borders the large, thinly populated region to the Crec's south. From north to south: Bhorv Zolk -> undesirables -> undesirable's-undesirables -> next tribe over (Balrag). As it was both downhill and a good bit south, it was noticeably steamier. Gog or Grav would struggle for something meaning "exotic" to describe the milieu[fn:: A meaning they understood, but a word for which they might struggle.] that was Balrag Culture[fn:: They were fans.]. They had a style of drumming that was considered by most Crec to be a "bit on the carnal side", with rhythms that merged on scandalous. It was known that they rarely scratched any of their drumming down, even if improperly. Their drumming was loud enough to be heard softly but distinctly on a calm, clear, crisp [omg what is "christmas"?] night...usually long past midnight.
 - Battle of the Snake-Meal, The: Without a doubt the most famous battle from The Great Club War, and its turning point in favor of ultimate victory for the Crec.
 - between-ham-fire-pebbles: Hemorrhoids, piles.
 - Bhorv Zolk: The cave "system" in which the Crav live. Properly, it's the name of the hill that the cave is dug out of, but the two concepts are more or less interchangabel.
