--- a/000-preface.org
+++ b/000-preface.org
@@ -146,7 +146,7 @@ Our men cheered mightily, tempered indeed by the thought of those among our rank
 The audience collectively gave a pained, but soft groan of regret and some gently pulled on their noses.[fn:: This is a gesture of lament and deep respect for unavoidable sacrifices made.]
 #+begin_quote
 
-And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.].
+And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabbit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.].
 #+end_quote
 
 A quiet, knowing laugh from audience makes its way around the burrow.
@@ -173,7 +173,7 @@ A girl in her late teens, that could only charitably be considered a child stood
 
 Verk knew that putting his hand anywhere near his face would it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
 
-"Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heros put in a lot of blood, sweat, and dare I say lives, in far too many cases."
+"Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heroes put in a lot of blood, sweat, and dare I say lives, in far too many cases."
 
 Noses tugged.
 
@@ -277,6 +277,6 @@ Thinking that he should acknowledge so that all in the burrow could hear, since 
 
 Grav affected a casualness as he finished and casually made his way out of the crowded relief-burrow.
 
-Grav had yet-more, unwelcome thinking to do. He made his way to his burrow no longer shaken but stirred by Verks words.
+Grav had yet-more, unwelcome thinking to do. He made his way to his burrow no longer shaken but stirred by Verk's words.
 
 "What in the /Forest/ was that about?", he wondered.
