--- a/_notes.org
+++ b/_notes.org
@@ -41,6 +41,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- The word "think-long" is the transliteration of the compound word of theirs tha means "rational" in pretty much the sense that we mean it. It is a slur because, while it has been observed that rational thought bears good results often, the overwhelming majority of data showed that, when your life depends on it, as it nearly always does, relying on the supernatural bears better results. Therefore, being think-long (rational) is to just waste time and look like a good, naive target for pouncing instead of learning and practicing The Art that would likely save your life one day. rational: insult.
 - The big reveal at the end: bad 'bad' guys and 'good' guys literally just go their separate ways.
 - ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's booth their wine and their sacrament wine. Pretty much everything else is devil weed, but G&G are bold psyconauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
 - The Helpful Monkey is a river that flows southward (xxxfancy name for south) towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
