--- a/_notes.org
+++ b/_notes.org
@@ -16,20 +16,20 @@ We meet the Crec and learn about their world. Verk tells a story. It is deeply m
 
 We take the reader back to Zog's early years. Zog current clan leader, and that's why it's called "The Zog clan". Zog was a hero's hero, in other words, lucky he's not dead. He was known for his daring and just kind of /falling into/ situations that make him have the appearance of a total badass. He just happens to be the guy in the good -vs evil movie that throws the rock that seriously wounds the bad guy in the satisfying end. Roll credits. But despite all of his impressive doings, he really only has so much of a clue what's going on. He's not learned to have a look of wonderment when things work out for him. Giving the impression that he meant to do that all along is central to his persona. This means giving some pretty weak and convoluted explanations. We hear the perplexing story of Zog's first dive, and as far as anyone knew, first dive ever in the tar pits. He came off looking like a total stud, but came within seconds of dying about eight different times in the process.
 
-Let's have a from-birth to marriage fastforward, followed by tales of daring from his youth. And of course, displaying, entirely for what it is, his deeply held, more or less random believes that he's willing to club-fight over. Lots of adventures. Lots of badassery.
+Let's have a from-birth to marriage fast-forward, followed by tales of daring from his youth. And of course, displaying, entirely for what it is, his deeply held, more or less random believes that he's willing to club-fight over. Lots of adventures. Lots of badassery.
 
 The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 
 ** Ch. 001, wh
 
    
-** Ch. 00~, wherin Grav starts studying to become a lawyer (though we have a clever name for it)
+** Ch. 00~, wherein Grav starts studying to become a lawyer (though we have a clever name for it)
 ...
 Note: Grav cleverly invents the concept of "lawyer", works hard to become one, folks realize that not just anyone should be allowed to be a lawyer as you can ruin people's lives (!) and so creates Official Criteria, which Grav cannot meet. Grav becomes the first lawyer to exist and then the first law school student to fail the Bar (what funny word instead of "bar"? "stick"?) exam.
 ...
-** Ch. 00~, wherin Gog scratches "boulder-stump" into a soot-pallet and shouts it from atop Lame-Monkey Mountain three times on a dare
+** Ch. 00~, wherein Gog scratches "boulder-stump" into a soot-pallet and shouts it from atop Lame-Monkey Mountain three times on a dare
 ...
-** Ch. 00~, wherin the Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings to update the list
+** Ch. 00~, wherein the Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings to update the list
 ...
 ** Ch. 00~, wherein Zog distracts from the business of the Elders-Quarum with an incident involving a hyena
 ...
@@ -43,17 +43,17 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 - The word "think-long" is the transliteration of the compound word of theirs tha means "rational" in pretty much the sense that we mean it. It is a slur because, while it has been observed that rational thought bears good results often, the overwhelming majority of data showed that, when your life depends on it, as it nearly always does, relying on the supernatural bears better results. Therefore, being think-long (rational) is to just waste time and look like a good, naive target for pouncing instead of learning and practicing The Art that would likely save your life one day. rational: insult.
 - The big reveal at the end: bad 'bad' guys and 'good' guys literally just go their separate ways.
-- ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's booth their wine and their sacrament wine. Pretty much everything else is devil weed, but G&G are bold psyconauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
-- The Helpful Monkey is a river that flows southward (xxxfancy name for south) towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
+- ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's booth their wine and their sacrament wine. Pretty much everything else is devil weed, but G&G are bold, fit psychonauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
+- The Helpful Monkey is a river that flows southward (xxxfancy name for south) towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [Euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
 - I said "pre flowering plants", didn't I? 1) this probably impossible [maybe who cares], 2) "banana", "melon", "gourd"...will have to rethink. All this because I wanted to use "uvula" instead of "pea"?
-- Brother -> Bro is purposely propagated among the Crec. Soon cave/men/ are calling each other "bro". Then there is a great buggary scandal in "the military" during which, from one of their discussions, comes the hilarious idea of "bro-ham: a male buttox used as a substitute for cavewomen (we need a good word for 'vag')" As in, "Out on deployment and away from your wives for moons at a time? Worry not! bro-ham abound."
-- The mysterious forest babes: G&G, on one of their especially distant and daring excursions, near the border with xxx yet-anther-another-another-hated-neighboring-Forest xxx. They are sinewy, flexible, and fit. And they don't sweat much. They are giggly and have absolutely no overlapping language with G&G but they somehow manage to find a way to agree to meet back at this very spot (don't forget) exactly these many moons from now (don't forget or miscalculate). And they have fun. Bouncy-bouncy. They are like a bizzaro G&G, but baby-makers (although in literal terms, G&G thought of babies very little). They were ingenious and mysterious like G&G. They thought freely (oh so freely). And loved a bit of mischeiuf of any kind.
+- Brother -> Bro is purposely propagated among the Crec. Soon cave/men/ are calling each other "bro". Then there is a great buggery scandal in "the military" during which, from one of their discussions, comes the hilarious idea of "bro-ham: a male buttocks used as a substitute for cavewomen (we need a good word for 'vag')" As in, "Out on deployment and away from your wives for moons at a time? Worry not! bro-ham abound."
+- The mysterious forest babes: G&G, on one of their especially distant and daring excursions, near the border with xxx yet-anther-another-another-hated-neighboring-Forest xxx. They are sinewy, flexible, and fit. And they don't sweat much. They are giggly and have absolutely no overlapping language with G&G but they somehow manage to find a way to agree to meet back at this very spot (don't forget) exactly these many moons from now (don't forget or miscalculate). And they have fun. Bouncy-bouncy. They are like a bizzaro G&G, but baby-makers (although in literal terms, G&G thought of babies very little). They were ingenious and mysterious like G&G. They thought freely (oh so freely). And loved a bit of mischief of any kind.
 - Needs uniformity, rules, standardization:
   - Capitalization of Crecspeak
   - The language used to express numbers.
   - If we are going to "tag" Crecspeak, should be done soon.
   - I flop back and forth between "men" and "cavemen", etc. do I care? do I have a rule? am I making a point with the choices?
-- It would be neat if there were lots of stories about "small-ones" (frickin babys), met at random in unimaginably distant parts of the xxxworldxxx. They don't speak. They don't act surprised. They trod on with purpose, armed like a skilled, adult hunter, look your way and nod, but never say a word and move on. These are known as forest-babies (maybe) and are fucking mystical.
+- It would be neat if there were lots of stories about "small-ones" (frickin babies), met at random in unimaginably distant parts of the xxxworldxxx. They don't speak. They don't act surprised. They trod on with purpose, armed like a skilled, adult hunter, look your way and nod, but never say a word and move on. These are known as forest-babies (maybe) and are fucking mystical.
 - Communication
   - Loud, long-distance whistling.
   - Somehow making a single loud bang. And then having a code "one bangith mean trouble, two bangith mean party"
@@ -89,12 +89,12 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - ancient-speak: Generally meaning "story-telling", this analogous to selling a book in our times. It is both 1) revered by default 2) kind of, let's face it, not always going to be a big deal. Times change, pops.
 - baby-makers: Girls. I am sorry. My job is to bring you this story accurately, including look /and/ feel. This was their world, sorry. But a Crec, or perhaps even any caveperson would have no less respect for a /mere/ baby-maker than you would for say a truck driver or computer technician. It's due its own respect, in their eyes. And everyone gets along, no less than you and your sister did. It's just what's up, that's all. 
 - bachelor-tree: A delicate, oddly "chubby" tree with soft lacy leaves that both looks and smells like your wedding night. Small burrowing animals like the bachelor-tree because its soft, incredibly wet flesh makes burrowing quite easy and the natural internal heaving of the tree ensures that it is a snug, sometimes very snug place to burrow, especially in the dry season. It can be problematic for burrowers to breath, because of the snugness and most will usually nest with just their noses sticking out of the opening. Because small tree-dwelling animals are predominately nocturnal, animal burrows in the bachelor-tree are almost always empty at night. This is also a very delicate topic of conversation among the Crec. Sure, the Amish might know what a vagina /is/, but will somehow manage to go a lifetime without saying it out-loud or acknowledging its existence[fn:: Ever.] (to reach for a tangible analog you might understand.) [TODO: the complex bachelor-tree reproductive cycle should *depend upon* cavemen.]
-- Balrag: A tribe that borders the large, thinly populated region to the Crec's south. From north to south: Bhorv Zolk -> undesirables -> undesirable's-undesirables -> next tribe over (Balrag). As it was both downhill and a good bit south, it was noticeably steamier. Gog or Grav would struggle for something meaning "exotic" to describe the milieu[fn:: A meaning they understood, but a word for which they might struggle.] that was Balrag Culture[fn:: They were fans.]. They had a style of drumming that was considered by most Crec to be a "bit on the carnal side", with rhythms that merged on scandalous. It was known that they rarely scratched any of their drumming down, even if improperly. Their drumming was loud enough to be heard softly but distinctly on a calm, clear, crisp [omg what is "christmas"?] night...usually long past midnight.
+- Balrag: A tribe that borders the large, thinly populated region to the Crec's south. From north to south: Bhorv Zolk -> undesirables -> undesirable's-undesirables -> next tribe over (Balrag). As it was both downhill and a good bit south, it was noticeably steamier. Gog or Grav would struggle for something meaning "exotic" to describe the milieu[fn:: A meaning they understood, but a word for which they might struggle.] that was Balrag Culture[fn:: They were fans.]. They had a style of drumming that was considered by most Crec to be a "bit on the carnal side", with rhythms that merged on scandalous. It was known that they rarely scratched any of their drumming down, even if improperly. Their drumming was loud enough to be heard softly but distinctly on a calm, clear, crisp [omg what is "Christmas"?] night...usually long past midnight.
 - Battle of the Snake-Meal, The: Without a doubt the most famous battle from The Great Club War, and its turning point in favor of ultimate victory for the Crec.
 - between-ham-fire-pebbles: Hemorrhoids, piles.
-- Bhorv Zolk: The cave "system" in which the Crav live. Properly, it's the name of the hill that the cave is dug out of, but the two concepts are more or less interchangabel.
+- Bhorv Zolk: The cave "system" in which the Crec live. Properly, it's the name of the hill that the cave is dug out of, but the two concepts are more or less interchangeable.
 - bird-scat: Used variously for snot, puss, and, if you are a particularly nasty sort of Crec, semen.
-- boulder-door: A quantity. Exactly 100. Reckoned to be the number of boulders to keep handy to baracade the average cave entrance.
+- boulder-door: A quantity. Exactly 100. Reckoned to be the number of boulders to keep handy to barricade the average cave entrance.
 - boulder-rhino: A kind of engine of war that is know by many names in our world. At its simplest (which it usually is), it is a collection of the largest stones that can possibly be hauled to the top of the hill/mountain, restrained by a few smaller rocks that will somehow be swat out of the way at the right time, releasing a thunderous stampede of very big boulders, in the direction of one's enemy, most often.
 - boulder-stump: Here we reach /the/ word around which this entire story orbits. You'll figure it out. It's pretty embarrassing after all.
 - burrow: The Crec use this word like we do to mean an animal's dwelling, under the ground or in a rotted tree for example. They also use it to mean "room", "cave" or any other more-or-less person-sized void made in rock or sturdy earth for the purpose of occupying, even if only for a drop-stone.
@@ -114,7 +114,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - man: A unit of measure with an obvious reference object. If you just assumed "six feet", you would be within 0.4%, just by "coincidence". Like all units of measure, but especially with 'length', the Crec are fastidious and follow a badger's warren of different ideas to further add precision. In conversation, like us, units of measure are imprecise. And unavoidably, things like time its daughter units, like speed are tricker, but there are always a few learned men to lower the precision bar ever more. BTW, it is never "men". As a unit of measure: one man, two man, three man.
 - mouse-spawn: Exactly 500. The term comes from the number of mice believed to result from putting one mating pair of mice in an unoccupied one-family cave in the course of four moons. Which is also roughly the amount of time required to make the Unkempt-Loud-Suffering Pilgrimage from The Forest of Crec and back.
 - predict-tool: Probably a good start on the idea of "a hypothesis".
-- quiet-one: A small, quiet, demure baby-maker between 7 and 11 years old. This term /is/ specific to that, even though it sounds like it could be generalized and understood. Girls of this demeanor and age were considered very precious, lovable, and pure. This is the phase in a baby-maker's life that is considered good for /molding/ by encouraging innosents, purity, during this stage when it becomes more susseptale to feedback.
+- quiet-one: A small, quiet, demure baby-maker between 7 and 11 years old. This term /is/ specific to that, even though it sounds like it could be generalized and understood. Girls of this demeanor and age were considered very precious, lovable, and pure. This is the phase in a baby-maker's life that is considered good for /molding/ by encouraging innocence, purity, during this stage when it becomes more susceptible to feedback.
 - relax-marks: Everyone sits on rocks. Some rocks get a lot of mileage. Inevitably there are brown, burnished areas that repel liquids well and indicate a sweet rock to sit on. So there is some tension: On the one hand they are a mark of shame, sloth and bad housekeeping, but on the other hand everyone likes a good sit.
 - rhino-calf: It means literally that but is also a term of endearment that you can still say without being too creepy. Like "dear".
 - rhino-scat: Mostly known as being the name of a certain hill that was central to the events of The Battle of the Snake Meal during The Great Club War. Actual rhino scat has a certain look. The famous hill has that same look.
